# utilin

./: pyproject.toml  tox.ini
.github/workflows/: setup-and-test.yml
src/utilin/: constants.py  utils.py
src/utilin/data/: __init__.py  mega_scale_folding_stability.py  proteingym.py
src/utilin/encode/: one_hot.py
src/utilin/plotting/: __init__.py  prediction.py
tests/utilin/encode/: test_one_hot.py
