[project]
name = "utilin"
version = "0.1.0"
description = "Utility package for protein engineering"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "biotite>=0.40.0",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
    "loguru>=0.7.2",
    "ruff>=0.6.9",
    "polyleven>=0.8",
    "scikit-learn>=1.3.2",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
