[project]
name = "utilin"
version = "0.1.0"
description = "Utility package for protein engineering"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "biotite>=0.40.0",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "jupyter>=1.1.1",
    "seaborn>=0.13.2",
    "loguru>=0.7.2",
    "ruff>=0.6.9",
    "polyleven>=0.8",
    "scikit-learn>=1.3.2",
    "pytest>=8.3.3",
    "numpy>1.24.4",
    "tox>=4.23.2",
]

numpy = [
    ">=2.0; python_version >= '3.12'"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
